--- a/PortFolio/test.html
+++ b/PortFolio/test.html
@@ -7,7 +7,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color:rgb(141, 211, 213);">
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -69,8 +69,8 @@
 
     <section id="feedback" class="container mt-5">
         <h2 class="text-center">Feedback & Achievements</h2>
-        <p>🏆 Received Best Developer Award at [Company/Event].</p>
-        <p>💡 Contributed to Open Source Projects.</p>
+        <li class="list-group-item">🏆 Received Best Developer Award at [Company/Event].</li>
+        <p class="list-group-item">💡 Contributed to Open Source Projects.</p>
     </section>
 
     
